Alignment fix demo section

--- a/src/components/pages/Common/Demo/Demo.scss
+++ b/src/components/pages/Common/Demo/Demo.scss
@@ -19,8 +19,7 @@
       @media all and (min-width: 768px) {
          flex-direction: row;
          align-items: center;
-         justify-content: space-around;
-         padding-block: 100px;
+         padding: 100px 50px;
       }
       // }
       .left_content {
